--- a/template/input.mjml
+++ b/template/input.mjml
@@ -2,16 +2,16 @@
   <mj-head>
     <!-- Import Google Fonts -->
     <mj-font name="Poppins" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" />
-    
+
     <!-- Global Styles -->
     <mj-attributes>
       <mj-all font-family="Poppins, sans-serif" padding="0" />
       <mj-text color="#2B2147" align="left" padding="0" />
-      <mj-wrapper padding="0" />
+      <mj-wrapper padding="0" border="1px solid rgb(188, 188, 188)" />
       <mj-section padding="0" />
       <mj-column padding="0" />
     </mj-attributes>
-    
+
     <!-- Custom CSS -->
     <mj-style>
       .service-tag {
@@ -19,23 +19,28 @@
         font-size: 12px;
         color: #2B2147;
       }
+
       .location-link {
         color: #2B2147;
         text-decoration: none;
         font-size: 10px;
       }
+
       .badge-text {
         font-size: 10px;
         color: #2B2147;
       }
+
       .social-icons {
         display: inline-block;
-        padding-right: 12px;
+        padding-right: 6px;
       }
+
       .social-icons img {
         display: inline-block;
         vertical-align: middle;
       }
+
       .main-table {
         width: 100%;
         table-layout: fixed;
@@ -47,36 +52,28 @@
   </mj-head>
 
   <mj-body width="550px" background-color="#FFFFFF">
-    <!-- Social Icons Row -->
     <mj-wrapper>
+
+      <!-- Social Icons Row -->
       <mj-section>
         <mj-column>
           <mj-raw>
-            <div style="padding-bottom: 16px;">
+            <div style="margin-bottom: 8px;">
               {{#each socialLinks}}
-              <a href="{{url}}" target="_blank" class="social-icons">
-                <img src="{{icon}}" alt="{{alt}}" width="22" height="22">
-              </a>
+                <a href="{{url}}" target="_blank" class="social-icons">
+                  <img src="{{icon}}" alt="{{alt}}" width="22" height="22">
+                </a>
               {{/each}}
             </div>
           </mj-raw>
         </mj-column>
       </mj-section>
-    </mj-wrapper>
 
-    <!-- Main Content -->
-    <mj-wrapper>
+      <!-- Main Content -->
       <mj-section>
         <!-- Profile Picture Column -->
         <mj-column width="125px" vertical-align="top">
-          <mj-image src="{{profile.photo.url}}"
-            alt="{{profile.photo.alt}}"
-            width="125px"
-            height="180px"
-            border-radius="12px"
-            border="1px solid #DCC3A1"
-            padding-right="10px"
-            align="left" />
+          <mj-image src="{{profile.photo.url}}" alt="{{profile.photo.alt}}" width="125px" border-radius="12px" border="1px solid #DCC3A1" padding-right="10px" align="left" />
         </mj-column>
 
         <!-- Main Content Column -->
@@ -98,12 +95,12 @@
             <table cellpadding="0" cellspacing="0" border="0" style="margin: 4px 0;">
               <tr>
                 {{#each services}}
-                <td style="white-space: nowrap; padding-right: 8px;">
-                  <span class="service-tag">{{this}}</span>
-                </td>
-                {{#unless @last}}
-                <td style="padding: 0 4px; color: #2B2147;">|</td>
-                {{/unless}}
+                  <td style="white-space: nowrap; padding-right: 8px;">
+                    <span class="service-tag">{{this}}</span>
+                  </td>
+                  {{#unless @last}}
+                    <td style="padding: 0 4px; color: #2B2147;">|</td>
+                  {{/unless}}
                 {{/each}}
               </tr>
             </table>
@@ -114,12 +111,11 @@
             <table cellpadding="0" cellspacing="0" border="0" style="margin: 4px 0;">
               <tr>
                 {{#each locations}}
-                <td style="white-space: nowrap; padding-right: 8px;">
-                  <a href="{{mapUrl}}" class="location-link">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true"
-                      alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;"> {{name}}
-                  </a>
-                </td>
+                  <td style="white-space: nowrap; padding-right: 8px;">
+                    <a href="{{mapUrl}}" class="location-link">
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;"> {{name}}
+                    </a>
+                  </td>
                 {{/each}}
               </tr>
             </table>
@@ -133,12 +129,12 @@
                 <td style="padding-right: 16px; vertical-align: top;">
                   <table cellspacing="0" border="0">
                     {{#each badges.awards}}
-                    <tr>
-                      <td style="padding-bottom: 4px; white-space: nowrap;">
-                        <img src="{{icon}}" alt="{{alt}}" width="14" height="14" style="vertical-align: middle;">
-                        <span class="badge-text" style="padding-left: 4px;">{{text}}</span>
-                      </td>
-                    </tr>
+                      <tr>
+                        <td style="padding-bottom: 4px; white-space: nowrap;">
+                          <img src="{{icon}}" alt="{{alt}}" width="14" height="14" style="vertical-align: middle;">
+                          <span class="badge-text" style="padding-left: 4px;">{{text}}</span>
+                        </td>
+                      </tr>
                     {{/each}}
                   </table>
                 </td>
@@ -146,14 +142,14 @@
                 <td style="vertical-align: top;">
                   <table cellspacing="0" border="0">
                     {{#each badges.media}}
-                    <tr>
-                      <td style="padding-bottom: 4px; white-space: nowrap;">
-                        <a href="{{url}}" style="text-decoration: none;">
-                          <img src="{{icon}}" alt="{{alt}}" width="14" height="14" style="vertical-align: middle;">
-                          <span class="badge-text" style="padding-left: 4px;">{{text}}</span>
-                        </a>
-                      </td>
-                    </tr>
+                      <tr>
+                        <td style="padding-bottom: 4px; white-space: nowrap;">
+                          <a href="{{url}}" style="text-decoration: none;">
+                            <img src="{{icon}}" alt="{{alt}}" width="14" height="14" style="vertical-align: middle;">
+                            <span class="badge-text" style="padding-left: 4px;">{{text}}</span>
+                          </a>
+                        </td>
+                      </tr>
                     {{/each}}
                   </table>
                 </td>
@@ -162,10 +158,8 @@
           </mj-raw>
         </mj-column>
       </mj-section>
-    </mj-wrapper>
 
-    <!-- Disclaimer -->
-    <mj-wrapper>
+      <!-- Disclaimer -->
       <mj-section>
         <mj-column>
           <mj-text font-size="10px" color="#2b2147" font-style="italic" padding-top="10px">
@@ -173,6 +167,8 @@
           </mj-text>
         </mj-column>
       </mj-section>
+
     </mj-wrapper>
+
   </mj-body>
 </mjml>
