--- a/template/output.html
+++ b/template/output.html
@@ -43,13 +43,13 @@
       @media only screen and (min-width:480px) {
         .mj-column-per-100 { width:100% !important; max-width: 100%; }
 .mj-column-px-125 { width:125px !important; max-width: 125px; }
-.mj-column-px-395 { width:395px !important; max-width: 395px; }
+.mj-column-per-75 { width:75% !important; max-width: 75%; }
       }
     </style>
     <style media="screen and (min-width:480px)">
       .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
 .moz-text-html .mj-column-px-125 { width:125px !important; max-width: 125px; }
-.moz-text-html .mj-column-px-395 { width:395px !important; max-width: 395px; }
+.moz-text-html .mj-column-per-75 { width:75% !important; max-width: 75%; }
     </style>
     
     
@@ -202,9 +202,19 @@
       
       <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
         <!-- Main Content -->
-          <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:548px;" width="548" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+          <!--[if mso | IE]><tr><td class="" width="550px" ><![endif]-->
+            
+      <table
+         align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
+      >
+        <tbody>
+          <tr>
+            <td>
+              
+        
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:548px;" width="548" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
-      
+        
       <div  style="margin:0px auto;max-width:548px;">
         
         <table
@@ -213,7 +223,7 @@
           <tbody>
             <tr>
               <td
-                 style="direction:ltr;font-size:0px;padding:0;text-align:center;"
+                 style="direction:ltr;font-size:0px;padding:0;text-align:left;"
               >
                 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><![endif]-->
       <!-- Profile Picture Column -->
@@ -271,10 +281,10 @@
     
           <!--[if mso | IE]></td><![endif]-->
     <!-- Main Content Column -->
-          <!--[if mso | IE]><td class="" style="vertical-align:top;width:395px;" ><![endif]-->
+          <!--[if mso | IE]><td class="" style="vertical-align:top;width:411px;" ><![endif]-->
             
       <div
-         class="mj-column-px-395 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+         class="mj-column-per-75 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
       >
         
       <table
@@ -295,7 +305,7 @@
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:20px;font-weight:bold;line-height:1;text-align:left;color:#2B2147;"
+         style="font-family:Poppins, sans-serif;font-size:21px;font-weight:600;line-height:1;text-align:left;color:#2A2042;"
       >Nouvelle L. Gonzalo, Esq.</div>
     
                 </td>
@@ -307,7 +317,7 @@
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:12px;line-height:1;text-align:left;color:#2B2147;"
+         style="font-family:Poppins, sans-serif;font-size:12px;line-height:1;text-align:left;color:#7059A6;"
       >Founder and Managing Attorney</div>
     
                 </td>
@@ -429,8 +439,16 @@
         
       </div>
     
+        
+      <!--[if mso | IE]></td></tr></table><![endif]-->
+    
       
-      <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
+          <!--[if mso | IE]></td></tr><![endif]-->
         <!-- Disclaimer -->
           <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:548px;" width="548" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
