--- a/template/input.mjml
+++ b/template/input.mjml
@@ -16,7 +16,7 @@
     <!-- Information Attributes -->
     <mj-attributes>
       <!-- Title: 14*1.5=21px -->
-      <mj-class name="title" font-size="21px" font-weight="600" line-height="1" padding-bottom="2px" color="#2A2042" />
+      <mj-class name="title" font-size="18px" font-weight="600" line-height="1" padding-bottom="2px" color="#2A2042" />
       <!-- Subtitle: 8*1.5=12px -->
       <mj-class name="subtitle" font-size="12px" line-height="1" padding-bottom="2px" color="#7059A6" />
       <!-- Company: 7*1.5=10.5px ~ 11px -->
@@ -64,6 +64,7 @@
         color: #2B2147;
         text-decoration: none;
         font-size: 10px;
+        letter-spacing: 0.04em;
       }
 
       .badge-text {
@@ -165,12 +166,13 @@
 
           <!-- Locations -->
           <mj-raw>
-            <table cellpadding="0" cellspacing="0" border="0" style="margin: 4px 0;">
+            <table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
               <tr>
                 {{#each locations}}
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="{{mapUrl}}" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;"> {{name}}
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <span>{{name}}</span>
                     </a>
                   </td>
                 {{/each}}
