--- a/template/output.html
+++ b/template/output.html
@@ -95,6 +95,7 @@
         color: #2B2147;
         text-decoration: none;
         font-size: 10px;
+        letter-spacing: 0.04em;
       }
 
       .badge-text {
@@ -327,7 +328,7 @@
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:21px;font-weight:600;line-height:1;text-align:left;color:#2A2042;"
+         style="font-family:Poppins, sans-serif;font-size:18px;font-weight:600;line-height:1;text-align:left;color:#2A2042;"
       >Nouvelle L. Gonzalo, Esq.</div>
     
                 </td>
@@ -400,26 +401,30 @@
                     <span>IP</span>
                   </td>
               </tr>
-            </table><!-- Locations --><table cellpadding="0" cellspacing="0" border="0" style="margin: 4px 0;">
+            </table><!-- Locations --><table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
               <tr>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/Gonzalo+Law+Miami/@25.7612322,-80.1936558,17z/data&#x3D;!3m2!4b1!5s0x88db8059298cca51:0x3baf46daaa122580!4m6!3m5!1s0x88d9b755508c5a73:0x7b86035a9f7e601c!8m2!3d25.7612274!4d-80.1910809!16s%2Fg%2F11rmq9hk5z?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;"> Miami
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <span>Miami</span>
                     </a>
                   </td>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/250+Park+Ave+%237th,+New+York,+NY+10017,+USA/@40.7551183,-73.9785697,17z/data&#x3D;!3m1!4b1!4m6!3m5!1s0x89c258fdebddb677:0xa779d92ce5daaa58!8m2!3d40.7551143!4d-73.9759948!16s%2Fg%2F11lkj5k_4w?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;"> New York
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <span>New York</span>
                     </a>
                   </td>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/Gonzalo+Law+-+Ohio/@41.5013866,-81.6911661,17.88z/data&#x3D;!3m1!5s0x8830e157c586f7a5:0xf55a56096740a787!4m14!1m7!3m6!1s0x8830fa7f9502942b:0x5717885f83f1e3d6!2s600+Superior+Ave+E+%231300,+Cleveland,+OH+44114,+USA!3b1!8m2!3d41.5013147!4d-81.6897723!3m5!1s0x8830fa7f9426e30d:0xc306b3af3fa521e3!8m2!3d41.50138!4d-81.6895733!16s%2Fg%2F1tgkhycm?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;"> Cleveland
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <span>Cleveland</span>
                     </a>
                   </td>
                   <td style="white-space: nowrap; padding-right: 8px;">
                     <a href="https://www.google.com/maps/place/747+SW+2nd+Ave+%23190b,+Gainesville,+FL+32601,+USA/@29.6499443,-82.3356049,17z/data&#x3D;!3m1!4b1!4m5!3m4!1s0x88e8a38fbec1e0e1:0xe54e967c4b78ca81!8m2!3d29.6499397!4d-82.33303?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;"> Gainesville
+                      <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/pin-icon.svg?raw=true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                      <span>Gainesville</span>
                     </a>
                   </td>
               </tr>
