--- a/template/input.mjml
+++ b/template/input.mjml
@@ -7,7 +7,7 @@
     <mj-attributes>
       <mj-all font-family="Poppins, sans-serif" padding="0" />
       <mj-text color="#2B2147" align="left" padding="0" />
-      <mj-wrapper padding="0" border="1px solid rgb(188, 188, 188)" />
+      <mj-wrapper padding="0" />
       <mj-section padding="0" />
       <mj-column padding="0" />
 
@@ -22,7 +22,14 @@
       <!-- Company: 7*1.5=10.5px ~ 11px -->
       <mj-class name="company" font-size="11px" italic color="#EE8C3A" padding-bottom="2px" />
 
+      <!-- Disclaimer Section -->
+      <!-- Warning background color: -->
+      <mj-class name="disclaimer-section" background-color="hsl(35, 94%, 90%)" border-radius="6px" border="1px solid hsl(35, 94%, 80%)" padding="4px 6px" />
+
+      <mj-class name="disclaimer" font-size="10px" color="hsl(35, 94%, 5%)" line-height="1.25" letter-spacing="0.02em" font-style="italic" />
+
     </mj-attributes>
+
 
 
 
@@ -37,6 +44,9 @@
       */
       }
 
+      .main-content {
+        margin-bottom: 10px;
+      }
 
 
       /* Service Tag: 5*1.5=7.5px ~ 8px */
@@ -141,7 +151,7 @@
       </mj-section>
 
       <!-- Main Content -->
-      <mj-section padding="0" full-width="full-width" text-align="left">
+      <mj-section css-class="main-content" padding="0" full-width="full-width" text-align="left">
         <!-- Profile Picture Column -->
         <mj-column width="125px" vertical-align="top" padding="0">
           <mj-image src="{{profile.photo.url}}" alt="{{profile.photo.alt}}" width="125px" border-radius="12px" border="1px solid #DCC3A1" padding-right="10px" align="left" />
@@ -256,9 +266,9 @@
       </mj-section>
 
       <!-- Disclaimer -->
-      <mj-section>
+      <mj-section mj-class="disclaimer-section">
         <mj-column>
-          <mj-text font-size="10px" color="#2b2147" font-style="italic" padding-top="10px">
+          <mj-text mj-class="disclaimer">
             <strong>Disclaimer:</strong> {{disclaimer.text}}
           </mj-text>
         </mj-column>
