--- a/template/output.html
+++ b/template/output.html
@@ -74,6 +74,9 @@
       */
       }
 
+      .main-content {
+        margin-bottom: 10px;
+      }
 
 
       /* Service Tag: 5*1.5=7.5px ~ 8px */
@@ -98,10 +101,46 @@
         letter-spacing: 0.04em;
       }
 
-      .badge-text {
+
+      .badge-cell {
+        background-color: #F5F5F5;
+        border: 1px solid #E5E5E5;
+        border-radius: 2px;
+        padding: 3px 4px;
+        white-space: nowrap;
+      }
+
+      /* Media Column */
+      /* ? Different background color and border color to indicate media links */
+      .media-column .badge-cell {
+        background-color: hsl(219, 60%, 95.50%);
+        border: 1px solid hsl(219, 60%, 80.00%);
+      }
+
+
+      .badge-cell a {
+        text-decoration: underline;
+      }
+
+      .badge-cell a span {
+        text-decoration: underline;
+        color: hsl(219, 60%, 55.50%);
+      }
+
+      .badge-cell img {
+        vertical-align: middle;
+      }
+
+      .badge-cell span {
         font-size: 10px;
         color: #2B2147;
+        vertical-align: middle;
+        line-height: 14px;
+        /* Match the icon height */
+        display: inline-block;
+        padding-left: 4px;
       }
+
 
       .social-icons {
         display: inline-block;
@@ -121,7 +160,6 @@
     <!-- Import Google Fonts -->
 <!-- Global Styles -->
 <!-- Information Attributes -->
-<!-- Service Tag: 12*2.2=26.4px ~ 26px -->
 <!-- Custom CSS -->
 <!-- Variables -->
   </head>
@@ -146,15 +184,15 @@
           <tbody>
             <tr>
               <td
-                 style="border:1px solid rgb(188, 188, 188);direction:ltr;font-size:0px;padding:0;text-align:center;"
+                 style="direction:ltr;font-size:0px;padding:0;text-align:center;"
               >
                 <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><![endif]-->
                   
       <!-- Social Icons Row -->
-          <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:548px;" width="548" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+          <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  style="margin:0px auto;max-width:548px;">
+      <div  style="margin:0px auto;max-width:550px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -164,7 +202,7 @@
               <td
                  style="direction:ltr;font-size:0px;padding:0;text-align:center;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:548px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -225,20 +263,20 @@
       
       <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
         <!-- Main Content -->
-          <!--[if mso | IE]><tr><td class="" width="550px" ><![endif]-->
+          <!--[if mso | IE]><tr><td class="main-content-outlook" width="550px" ><![endif]-->
             
       <table
-         align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
+         align="center" class="main-content" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
       >
         <tbody>
           <tr>
             <td>
               
         
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:548px;" width="548" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="main-content-outlook" role="presentation" style="width:550px;" width="550" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
         
-      <div  style="margin:0px auto;max-width:548px;">
+      <div  style="margin:0px auto;max-width:550px;">
         
         <table
            align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
@@ -304,7 +342,7 @@
     
           <!--[if mso | IE]></td><![endif]-->
     <!-- Main Content Column -->
-          <!--[if mso | IE]><td class="" style="vertical-align:top;width:411px;" ><![endif]-->
+          <!--[if mso | IE]><td class="" style="vertical-align:top;width:412.5px;" ><![endif]-->
             
       <div
          class="mj-column-per-75 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -431,39 +469,52 @@
             </table><!-- Badges --><table cellpadding="0" cellspacing="0" border="0" style="margin-top: 8px;">
               <tr>
                 <!-- Awards Column -->
-                <td style="padding-right: 16px; vertical-align: top;">
+                <td style="padding-right: 16px; vertical-align: top;" class="awards-column">
                   <table cellspacing="0" border="0">
                       <tr>
-                        <td style="padding-bottom: 4px; white-space: nowrap;">
-                          <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.svg?raw&#x3D;true" alt="Super Lawyers" width="14" height="14" style="vertical-align: middle;">
-                          <span class="badge-text" style="padding-left: 4px;">Super Lawyers Awardee</span>
+                        <!-- TODO: If last badge then no padding-bottom -->
+                        <td style="padding-bottom: 6px;">
+                          <div class="badge-cell">
+                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.svg?raw&#x3D;true" alt="Super Lawyers" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                            <span>Super Lawyers Awardee</span>
+                          </div>
                         </td>
                       </tr>
                       <tr>
-                        <td style="padding-bottom: 4px; white-space: nowrap;">
-                          <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.svg?raw&#x3D;true" alt="Award" width="14" height="14" style="vertical-align: middle;">
-                          <span class="badge-text" style="padding-left: 4px;">100 Most Influential Women</span>
+                        <!-- TODO: If last badge then no padding-bottom -->
+                        <td style="padding-bottom: 6px;">
+                          <div class="badge-cell">
+                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.svg?raw&#x3D;true" alt="Award" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                            <span>100 Most Influential Women</span>
+                          </div>
                         </td>
                       </tr>
                   </table>
                 </td>
+
                 <!-- Media Column -->
-                <td style="vertical-align: top;">
+                <td style="vertical-align: top;" class="media-column">
                   <table cellspacing="0" border="0">
                       <tr>
-                        <td style="padding-bottom: 4px; white-space: nowrap;">
-                          <a href="https://youtu.be/QkpH94lSvXs?si&#x3D;2wxHwgm8LorSLLqm" style="text-decoration: none;">
-                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.svg?raw&#x3D;true" alt="Bloomberg" width="14" height="14" style="vertical-align: middle;">
-                            <span class="badge-text" style="padding-left: 4px;">As seen on Bloomberg Business</span>
-                          </a>
+                        <!-- TODO: If last badge then no padding-bottom -->
+                        <td style="padding-bottom: 6px;">
+                          <div class="badge-cell">
+                            <a href="https://youtu.be/QkpH94lSvXs?si&#x3D;2wxHwgm8LorSLLqm">
+                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.svg?raw&#x3D;true" alt="Bloomberg" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                              <span>As seen on Bloomberg Business</span>
+                            </a>
+                          </div>
                         </td>
                       </tr>
                       <tr>
-                        <td style="padding-bottom: 4px; white-space: nowrap;">
-                          <a href="https://www.instagram.com/reel/DFdlS0Vpza-/?utm_source&#x3D;ig_web_copy_link&amp;igsh&#x3D;MzRlODBiNWFlZA&#x3D;&#x3D;" style="text-decoration: none;">
-                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.svg?raw&#x3D;true" alt="Pro-Bono Program" width="14" height="14" style="vertical-align: middle;">
-                            <span class="badge-text" style="padding-left: 4px;">About our Pro-Bono Law Program</span>
-                          </a>
+                        <!-- TODO: If last badge then no padding-bottom -->
+                        <td style="padding-bottom: 6px;">
+                          <div class="badge-cell">
+                            <a href="https://www.instagram.com/reel/DFdlS0Vpza-/?utm_source&#x3D;ig_web_copy_link&amp;igsh&#x3D;MzRlODBiNWFlZA&#x3D;&#x3D;">
+                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.svg?raw&#x3D;true" alt="Pro-Bono Program" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                              <span>About our Pro-Bono Law Program</span>
+                            </a>
+                          </div>
                         </td>
                       </tr>
                   </table>
@@ -499,20 +550,20 @@
     
           <!--[if mso | IE]></td></tr><![endif]-->
         <!-- Disclaimer -->
-          <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:548px;" width="548" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+          <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  style="margin:0px auto;max-width:548px;">
+      <div  style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;border-radius:6px;max-width:550px;">
         
         <table
-           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
+           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);width:100%;border-radius:6px;"
         >
           <tbody>
             <tr>
               <td
-                 style="direction:ltr;font-size:0px;padding:0;text-align:center;"
+                 style="border:1px solid hsl(35, 94%, 80%);direction:ltr;font-size:0px;padding:4px 6px;text-align:center;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:548px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -532,11 +583,11 @@
           
               <tr>
                 <td
-                   align="left" style="font-size:0px;padding:0;padding-top:10px;word-break:break-word;"
+                   align="left" style="font-size:0px;padding:0;word-break:break-word;"
                 >
                   
       <div
-         style="font-family:Poppins, sans-serif;font-size:10px;font-style:italic;line-height:1;text-align:left;color:#2b2147;"
+         style="font-family:Poppins, sans-serif;font-size:10px;font-style:italic;letter-spacing:0.02em;line-height:1.25;text-align:left;color:hsl(35, 94%, 5%);"
       ><strong>Disclaimer:</strong> The contents of this email and any attachments are confidential. They are intended for the named recipient(s) only. If you have received this email by mistake, please notify the sender immediately and do not disclose the contents to anyone or make copies thereof.</div>
     
                 </td>
