feat: fix the border radius of the disclaimer section

--- a/template/input.mjml
+++ b/template/input.mjml
@@ -24,9 +24,9 @@
 
       <!-- Disclaimer Section -->
       <!-- Warning background color: -->
-      <mj-class name="disclaimer-section" background-color="hsl(35, 94%, 90%)" border-radius="6px" border="1px solid hsl(35, 94%, 80%)" padding="4px 6px" />
+      <mj-class name="disclaimer-section" background-color="hsl(35, 94%, 90%)" padding="0" />
 
-      <mj-class name="disclaimer" font-size="10px" color="hsl(35, 94%, 5%)" line-height="1.25" letter-spacing="0.02em" font-style="italic" />
+      <mj-class name="disclaimer" font-size="10px" color="hsl(35, 94%, 5%)" line-height="1.25" letter-spacing="0.02em" font-style="italic" padding="4px 6px" />
 
     </mj-attributes>
 
@@ -125,6 +125,12 @@
       .main-table {
         width: 100%;
         table-layout: fixed;
+      }
+
+      .disclaimer-wrapper {
+        border: 1px solid hsl(35, 94%, 80%);
+        border-radius: 4px;
+        overflow: hidden;
       }
     </mj-style>
 
@@ -266,6 +272,9 @@
       </mj-section>
 
       <!-- Disclaimer -->
+      <mj-raw>
+        <div class="disclaimer-wrapper">
+      </mj-raw>
       <mj-section mj-class="disclaimer-section">
         <mj-column>
           <mj-text mj-class="disclaimer">
@@ -273,6 +282,9 @@
           </mj-text>
         </mj-column>
       </mj-section>
+      <mj-raw>
+        </div>
+      </mj-raw>
 
     </mj-wrapper>
 
