--- a/template/output.html
+++ b/template/output.html
@@ -156,6 +156,12 @@
         width: 100%;
         table-layout: fixed;
       }
+
+      .disclaimer-wrapper {
+        border: 1px solid hsl(35, 94%, 80%);
+        border-radius: 4px;
+        overflow: hidden;
+      }
     </style>
     <!-- Import Google Fonts -->
 <!-- Global Styles -->
@@ -549,21 +555,21 @@
       </table>
     
           <!--[if mso | IE]></td></tr><![endif]-->
-        <!-- Disclaimer -->
+        <!-- Disclaimer --><div class="disclaimer-wrapper">
           <!--[if mso | IE]><tr><td class="" width="550px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:550px;" width="550" bgcolor="hsl(35, 94%, 90%)" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
     
       
-      <div  style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;border-radius:6px;max-width:550px;">
+      <div  style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);margin:0px auto;max-width:550px;">
         
         <table
-           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);width:100%;border-radius:6px;"
+           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:hsl(35, 94%, 90%);background-color:hsl(35, 94%, 90%);width:100%;"
         >
           <tbody>
             <tr>
               <td
-                 style="border:1px solid hsl(35, 94%, 80%);direction:ltr;font-size:0px;padding:4px 6px;text-align:center;"
+                 style="direction:ltr;font-size:0px;padding:0;text-align:center;"
               >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:536px;" ><![endif]-->
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:550px;" ><![endif]-->
             
       <div
          class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
@@ -583,7 +589,7 @@
           
               <tr>
                 <td
-                   align="left" style="font-size:0px;padding:0;word-break:break-word;"
+                   align="left" style="font-size:0px;padding:4px 6px;word-break:break-word;"
                 >
                   
       <div
@@ -612,7 +618,10 @@
       </div>
     
       
-      <!--[if mso | IE]></td></tr></table></td></tr></table><![endif]-->
+      <!--[if mso | IE]></td></tr></table></td></tr><![endif]-->
+        </div>
+    
+                <!--[if mso | IE]></table><![endif]-->
               </td>
             </tr>
           </tbody>
