feat: use jpg assets instead of svg

--- a/template/output.html
+++ b/template/output.html
@@ -238,25 +238,25 @@
         <tbody>
           <div style="margin-bottom: 8px;">
                 <a href="https://drive.google.com/file/d/1GM5KUXqPt8h7IftLfr_vE5OwG7WBC0W7/view" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.svg?raw&#x3D;true" alt="Info" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/info-icon-container.jpg?raw&#x3D;true" alt="Info" width="22" height="22">
                 </a>
                 <a href="https://gonzalolaw.com/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.svg?raw&#x3D;true" alt="Website" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/globe-icon-container.jpg?raw&#x3D;true" alt="Website" width="22" height="22">
                 </a>
                 <a href="https://www.linkedin.com/in/nouvelle-gonzalo/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.svg?raw&#x3D;true" alt="LinkedIn" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/linkedin-icon-container.jpg?raw&#x3D;true" alt="LinkedIn" width="22" height="22">
                 </a>
                 <a href="https://www.instagram.com/gonzalolawpllc/" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.svg?raw&#x3D;true" alt="Instagram" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/insta-icon-container.jpg?raw&#x3D;true" alt="Instagram" width="22" height="22">
                 </a>
                 <a href="https://www.youtube.com/@GonzaloLawPLLC?sub_confirmation&#x3D;1" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.svg?raw&#x3D;true" alt="YouTube" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/youtube-icon-container.jpg?raw&#x3D;true" alt="YouTube" width="22" height="22">
                 </a>
                 <a href="tel:1-855-466-9256" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.svg?raw&#x3D;true" alt="Phone" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/phone-icon-container.jpg?raw&#x3D;true" alt="Phone" width="22" height="22">
                 </a>
                 <a href="mailto:ngonzalo@gonzalolaw.com" target="_blank" class="social-icons">
-                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.svg?raw&#x3D;true" alt="Email" width="22" height="22">
+                  <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/email-icon-container.jpg?raw&#x3D;true" alt="Email" width="22" height="22">
                 </a>
             </div>
         </tbody>
@@ -412,33 +412,7 @@
     
                 </td>
               </tr>
-            <!-- <mj-column padding="0 8px 0 0">
-            <mj-text mj-class="service-tag" padding="0" font-size="12px">International</mj-text>
-          </mj-column>
-            <mj-column width="20px" padding="0">
-              <mj-text color="#2B2147" padding="0" align="center">|</mj-text>
-            </mj-column>
-          <mj-column padding="0 8px 0 0">
-            <mj-text mj-class="service-tag" padding="0" font-size="12px">Non-Profits</mj-text>
-          </mj-column>
-            <mj-column width="20px" padding="0">
-              <mj-text color="#2B2147" padding="0" align="center">|</mj-text>
-            </mj-column>
-          <mj-column padding="0 8px 0 0">
-            <mj-text mj-class="service-tag" padding="0" font-size="12px">M&amp;A</mj-text>
-          </mj-column>
-            <mj-column width="20px" padding="0">
-              <mj-text color="#2B2147" padding="0" align="center">|</mj-text>
-            </mj-column>
-          <mj-column padding="0 8px 0 0">
-            <mj-text mj-class="service-tag" padding="0" font-size="12px">Contracts</mj-text>
-          </mj-column>
-            <mj-column width="20px" padding="0">
-              <mj-text color="#2B2147" padding="0" align="center">|</mj-text>
-            </mj-column>
-          <mj-column padding="0 8px 0 0">
-            <mj-text mj-class="service-tag" padding="0" font-size="12px">IP</mj-text>
-          </mj-column> --><!-- Each column contains a service tag --><!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+            <!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
               <tr>
                   <td class="service-tag">
                     <span>International</span>
@@ -492,7 +466,7 @@
                         <!-- TODO: If last badge then no padding-bottom -->
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
-                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.svg?raw&#x3D;true" alt="Super Lawyers" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.jpg?raw&#x3D;true" alt="Super Lawyers" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                             <span>Super Lawyers Awardee</span>
                           </div>
                         </td>
@@ -501,7 +475,7 @@
                         <!-- TODO: If last badge then no padding-bottom -->
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
-                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.svg?raw&#x3D;true" alt="Award" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                            <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/award-icon.jpg?raw&#x3D;true" alt="Award" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                             <span>100 Most Influential Women</span>
                           </div>
                         </td>
@@ -517,7 +491,7 @@
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
                             <a href="https://youtu.be/QkpH94lSvXs?si&#x3D;2wxHwgm8LorSLLqm">
-                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.svg?raw&#x3D;true" alt="Bloomberg" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.jpg?raw&#x3D;true" alt="Bloomberg" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                               <span>As seen on Bloomberg Business</span>
                             </a>
                           </div>
@@ -528,7 +502,7 @@
                         <td style="padding-bottom: 6px;">
                           <div class="badge-cell">
                             <a href="https://www.instagram.com/reel/DFdlS0Vpza-/?utm_source&#x3D;ig_web_copy_link&amp;igsh&#x3D;MzRlODBiNWFlZA&#x3D;&#x3D;">
-                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.svg?raw&#x3D;true" alt="Pro-Bono Program" width="14" height="14" style="vertical-align: middle; display: inline-block;">
+                              <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/play-icon.jpg?raw&#x3D;true" alt="Pro-Bono Program" width="14" height="14" style="vertical-align: middle; display: inline-block;">
                               <span>About our Pro-Bono Law Program</span>
                             </a>
                           </div>
